--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.transition-3
+{
+  transition: all 0.33s ease;
+  -webkit-transition:all 0.33s ease ;
+  -moz-transition:all 0.33s ease ;
+
+}
+.Transition-5
+{
+  transition: all 0.5s ease;
+  -webkit-transition:all 0.5s ease ;
+  -moz-transition:all 0.5s ease ;
+
+}
